kubernetes/policies/verify-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: verify-cosign-signature

      match:
        any:
        - resources:
            kinds:
            - Pod
            namespaces:
            - platform

      verifyImages:
      - imageReferences:
        - "192.168.216.130/library/*"

        mutateDigest: false
        required: true

        attestors:
        - entries:
          - keys:
              publicKeys: |
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE2GqaI8RR43JhNnyGq+DT+926AsNn
[...]
                -----END PUBLIC KEY-----
